FH-33 | Refactor code

--- a/src/app/pages/renter/listing/listing.component.html
+++ b/src/app/pages/renter/listing/listing.component.html
@@ -1,36 +1,33 @@
 <app-header-nav-bar></app-header-nav-bar>
-<div class="container">
-    <div class="title-search-result">
+<div class="p-4">
+    <h2>
         LISTING
-    </div>
-    <hr>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="row justify-content-center">
-                <div class="col-md-4 mb-3" *ngFor="let listing of listings">
-                    <div class="card">
-                        <img class="card-img-top" [src]="listing.imageUrl" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="item-address">{{ listing.address }}</p>
-                            <p class="style-rate">
-                                <span>
+    </h2>
+    <div class="d-flex gap-3">
+        <div class="accommodation-list">
+            <div class="container-fluid px-0">
+                <div class="row row-cols-3 g-3">
+                    <div class="col" *ngFor="let listing of listings">
+                        <div class="card">
+                            <img class="thumbnail" [src]="listing.imageUrl" alt="Card image cap">
+                            <div class="card-content">
+                                <p class="item-address">{{ listing.address }}</p>
+                                <span class="item-rate">
                                     <i class="bi bi-star-fill"></i>
                                     {{ listing.rate }} ({{ listing.reviews }})
                                 </span>
-                            </p>
-                            <p class="item-owner">Owner: {{ listing.owner }}</p>
-                            <p class="item-price">Price: {{ listing.price }}</p>
+                                <p class="item-owner">Owner: {{ listing.owner }}</p>
+                                <p class="item-price">Price: {{ listing.price }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="d-flex justify-content-center pagination-container">
+                    <ngb-pagination [collectionSize]="70" [page]="4" size="sm" [ellipses]="true" />
+                </div>
             </div>
-        </div>        
-        <div class="col-md-5">
-            <iframe class="style-map" src="https://maps.google.com/maps?q=latitude,longitude&z=15&output=embed">
-            </iframe>
         </div>
+        <iframe class="map" src="https://maps.google.com/maps?q=latitude,longitude&z=15&output=embed" width="100%">
+        </iframe>
     </div>
 </div>
