--- a/src/app/pages/renter/listing/listing.component.css
+++ b/src/app/pages/renter/listing/listing.component.css
@@ -1,40 +1,57 @@
-.title-search-result{
-    margin-top:10px;
-    color:#CD5C08;
-    font-size:30px;
+h2 {
+    color: #CD5C08;
+    font-size: 30px;
     font-weight: bold;
 }
-.card{
-    padding:0px;
-    margin:0px;
-    width: 250px;
-    height:280px;
+
+.accommodation-list {
+    max-width: 64%;
 }
-.card-img-top{
-    padding: 12px 12px 0px 12px ;
+
+.card {
+    padding: 12px;
 }
-.style-map {
-    width: 100%;
-    height: 1170px;
+
+.item-address {
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0px;
+}
+
+.item-owner {
+    font-size: 14px;
+    margin: 0px
+}
+
+.item-price {
+    font-size: 14px;
+    margin: 0px;
+    font-weight: bold;
+}
+
+.item-rate {
+    margin: 0px;
+}
+
+.map {
     border-radius: 20px;
 }
-.style-pagination{
-    color:#CD5C08
+
+.pagination-container {
+    height: fit-content;
+    margin-top: 12px;
 }
-.item-address{
-    font-size:14px;
-    font-weight: bold;
-    margin:0px;
+
+.pagination-container li {
+    color: red
 }
-.item-owner{
-    font-size: 14px;
-    margin:0px
+
+ngb-pagination ::ng-deep ul>li:not(.active)>a {
+    color: #336668 !important
 }
-.item-price{
-    font-size: 14px;
-    margin:0px;
-    font-weight: bold;
-}
-.style-rate{
-    margin:0px;
+
+
+
+ngb-pagination ::ng-deep ul>li.active>a {
+    background-color: #336668 !important
 }
