FH-11 | Refactor edit time range modal

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,12 +19,13 @@ body {
 }
 
 .edit-time-modal {
-    max-width: 540px !important;
+    max-width: fit-content !important;
 }
 
 .edit-guest-number-modal {
     max-width: 440px !important;
 }
+
 .payment-form-modal {
     max-width: 1200px !important;
 }
