--- a/src/app/pages/renter/accommodation-detail/components/payment-form/components/edit-time-modal/edit-time-modal.component.css
+++ b/src/app/pages/renter/accommodation-detail/components/payment-form/components/edit-time-modal/edit-time-modal.component.css
@@ -1,10 +1,39 @@
-.custom-col {
-  width: 237px;
-  padding: 0;
+.modal-header {
+  border-bottom: none;
 }
-.container {
-  width: 500px;
+
+.modal-body {
+  padding-top: 0;
 }
+
+.selected-time-range p {
+  margin: 0;
+}
+
+.selected-time-range .date-title {
+  color: #AFAFAF;
+  font-size: 10px;
+  font-family: Inter;
+  font-weight: 700;
+  word-wrap: break-word
+}
+
+.selected-time-range div {
+  border: 1px solid #DADADA;
+  width: 50%;
+  padding: 8px;
+}
+
+.selected-time-range .check-in {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.selected-time-range .check-out {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
 .custom-day {
   text-align: center;
   padding: 4px;
@@ -12,21 +41,39 @@
   height: 32px;
   width: 32px;
 }
+
 .custom-day.focused {
   background-color: #e6e6e6;
 }
+
 .custom-day.range,
 .custom-day:hover {
   background-color: #bf6326;
   color: white;
 }
+
 .custom-day.faded {
   background-color: rgba(191, 99, 38, 0.5);
 }
+
 .save-button {
   background-color: #bf6326;
   color: white;
 }
-.font-weight-bold {
-  font-weight: bold;
+
+.ngb-dp-weekday {
+  background-color: red !important;
+}
+
+ngb-datepicker ::ng-deep .ngb-dp-weekday {
+  color: #bf6326;
+  font-style: normal;
+}
+
+ngb-datepicker ::ng-deep .ngb-dp-navigation-chevron {
+  color: #bf6326
+}
+
+ngb-datepicker ::ng-deep .ngb-dp-week:last-child {
+  display: none;
 }
