--- a/src/app/pages/renter/accommodation-detail/components/payment-form/payment-form.component.html
+++ b/src/app/pages/renter/accommodation-detail/components/payment-form/payment-form.component.html
@@ -1,93 +1,75 @@
 <div class="modal-header">
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="modal"
-    (click)="closeModal()"
-  ></button>
+  <h3 class="mb-0 fw-bold">Booking</h3>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="closeModal()"></button>
 </div>
 
 <div class="modal-body">
-  <div class="container rounde">
-    <div class="row no-gutters">
-      <div class="col-7">
-        <div class="product-details mr-2">
-          <div class="d-flex flex-row align-items-center mb-4">
-            <h3 class="mb-0 font-weight-bold">Confirmation</h3>
+  <div class="d-flex gap-4 p-3">
+    <div class="d-flex flex-column justify-content-between">
+      <div class="reservation-information">
+        <h5 class="fw-bold">Your trip</h5>
+        <div class="d-flex flex-column gap-2">
+          <div class="room-code">
+            <p class="fw-bold">Code Room</p>
+            <p>#Room1</p>
           </div>
-          <hr />
-          <h5 class="mb-0 font-weight-bold">Your trip</h5>
-          <p class="mb-0 font-weight-bold">Code Room</p>
-          <p>#Room1</p>
-          <p class="mb-0 font-weight-bold">Day</p>
-          <div class="d-flex justify-content-between align-items-center mb-3">
-            <span>December 10 - 15, 2023</span>
-            <a (click)="openEditTimeModal()">Edit</a>
+          <div class="reservation-detail">
+            <p class="fw-bold">Day</p>
+            <div>
+              <span>December 10 - 15, 2023</span>
+              <button (click)="openEditTimeModal()">Edit</button>
+            </div>
           </div>
-          <p class="mb-0 font-weight-bold">Guest</p>
-          <div class="d-flex justify-content-between align-items-center mb-4">
-            <span>1 Guest</span>
-            <a (click)="openEditGuestNumberModal()">Edit</a>
+          <div class="reservation-detail">
+            <p class="fw-bold">Guest</p>
+            <div>
+              <span>1 Guest</span>
+              <button (click)="openEditGuestNumberModal()">Edit</button>
+            </div>
           </div>
-          <hr />
-          <h5 class="mb-2 font-weight-bold">Payment method</h5>
-          <div class="mb-4">
-            <label class="radio">
-              <input type="radio" name="card" value="payment" checked />
-              <span> <img src="assets/icons/vnpay.png" /></span>
-            </label>
-
-            <label class="radio">
-              <input type="radio" name="card" value="payment" />
-              <span><img src="assets/icons/momo.png" /></span>
-            </label>
-
-            <label class="radio">
-              <input type="radio" name="card" value="payment" />
-              <span><img src="assets/icons/visa.png" /></span>
-            </label>
-          </div>
-          <h5 class="mb-0 font-weight-bold">General standards</h5>
-          <p class="mb-0">
-            We ask all guests to remember a few simple rules to be a great
-            guest.
-          </p>
-          <ul>
-            <li>Comply with house rules</li>
-            <li>Maintain the house as if it were your home</li>
-          </ul>
-          <button
-            class="btn mx-auto d-flex mt-3 font-weight-bold"
-            type="button"
-          >
-            Submission
-          </button>
         </div>
       </div>
-      <div class="col-5">
-        <div class="payment-info">
-          <img src="assets/images/room.jpg" />
-          <p class="mt-2" style="text-align: center">
-            Quynh's entire home-right in the heart of Can Tho
-          </p>
-          <hr />
-          <h5 class="font-weight-bold">Price details</h5>
-          <div class="d-flex justify-content-between information">
-            <span>$14 x 4 night </span><span> $56</span>
-          </div>
-          <div class="d-flex justify-content-between information">
-            <span>Cleaning fee </span><span> $2</span>
-          </div>
-          <div class="d-flex justify-content-between information">
-            <span>FoxHub service fees </span><span> $10</span>
-          </div>
-          <hr />
-          <div
-            class="d-flex justify-content-between information font-weight-bold"
-          >
-            <span>(USD)</span><span>$68</span>
-          </div>
+      <div class="payment-option-list">
+        <h5 class="fw-bold">Payment method</h5>
+        <div class="d-flex gap-3">
+          <button class="payment-item btn btn-outline-secondary"><img src="assets/icons/vnpay.png" /></button>
+          <button class="payment-item btn btn-outline-secondary"><img src="assets/icons/momo.png" /></button>
+          <button class="payment-item btn btn-outline-secondary"><img src="assets/icons/visa.png" /></button>
         </div>
+      </div>
+      <div class="general-standard">
+        <h5 class="fw-bold">General standards</h5>
+        <p>
+          We ask all guests to remember a few simple rules to be a great
+          guest.
+        </p>
+        <ul>
+          <li>Comply with house rules</li>
+          <li>Maintain the house as if it were your home</li>
+        </ul>
+      </div>
+      <button class="btn mx-auto fw-bold submit-button" type="button">
+        Submit
+      </button>
+    </div>
+    <div class="payment-information">
+      <img src="assets/images/room.jpg" />
+      <p class="mt-2 text-center">
+        Quynh's entire home-right in the heart of Can Tho
+      </p>
+      <h5 class="fw-bold">Price details</h5>
+      <div class="d-flex justify-content-between information">
+        <span>$14 x 4 night </span><span> $56</span>
+      </div>
+      <div class="d-flex justify-content-between information">
+        <span>Cleaning fee </span><span> $2</span>
+      </div>
+      <div class="d-flex justify-content-between information">
+        <span>FoxHub service fees </span><span> $10</span>
+      </div>
+      <hr />
+      <div class="d-flex justify-content-between information fw-bold">
+        <span>(USD)</span><span>$68</span>
       </div>
     </div>
   </div>
