--- a/src/app/pages/renter/accommodation-detail/accommodation-detail.component.html
+++ b/src/app/pages/renter/accommodation-detail/accommodation-detail.component.html
@@ -1,4 +1,6 @@
-<div class="container mt-5">
+<app-header-nav-bar></app-header-nav-bar>
+
+<div class="px-4 py-3">
   <app-booking-detail-section></app-booking-detail-section>
   <app-infrastructure-section></app-infrastructure-section>
   <app-review-section></app-review-section>
