--- a/src/app/pages/renter/accommodation-detail/components/booking-detail-section/booking-detail-section.component.html
+++ b/src/app/pages/renter/accommodation-detail/components/booking-detail-section/booking-detail-section.component.html
@@ -1,55 +1,44 @@
-<h3 class="mb-3 font-weight-bold">
+<h3 class="mb-3 fw-bold">
   Quynh's entire home-right in the heart of Can Tho
 </h3>
-<div class="row no-gutters mb-4">
-  <div class="col-7 custom-column">
+<div class="row mb-3">
+  <div class="col-7">
     <ngb-carousel class="rounded-carousel">
       <ng-template ngbSlide *ngFor="let image of images">
-        <div class="picsum-img-wrapper custom-column">
+        <div class="picsum-img-wrapper">
           <img [src]="image" alt="Random first slide" />
         </div>
       </ng-template>
     </ngb-carousel>
   </div>
-  <div class="col-5 custom-column">
-    <iframe
-      class="map"
-      width="100%"
-      height="100%"
-      frameborder="0"
-      scrolling="no"
-      marginheight="0"
-      marginwidth="0"
-      src="https://www.google.com/maps/embed"
-    >
+  <div class="col-5">
+    <iframe class="map" width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+      src="https://www.google.com/maps/embed">
     </iframe>
   </div>
 </div>
-<div class="row no-gutter mb-2">
+<div class="row mb-3">
   <div class="col-7">
-    <p>
-      We warmly welcome our guests with enthusiasm and genuine hospitality.The
-      homestay offers convenience, fully furnished amenities, tranquility, and
-      is located right in the city center, just a 5-minute walk from Ninh Kieu
-      Pier, a must-visit destination in Can Tho. Close to the night market and
-      authentic local restaurants offering specialties from the Mekong Delta.
-    </p>
-    <h5 class="mb-4 show-more">Show more</h5>
+    <div>
+      <p>
+        We warmly welcome our guests with enthusiasm and genuine hospitality.The
+        homestay offers convenience, fully furnished amenities, tranquility, and
+        is located right in the city center, just a 5-minute walk from Ninh Kieu
+        Pier, a must-visit destination in Can Tho. Close to the night market and
+        authentic local restaurants offering specialties from the Mekong Delta.
+      </p>
+      <h5 class="mb-4 show-more">Show more</h5>
+    </div>
+    <div>
+      <h3 class="mb-3 fw-bold">Code Room</h3>
+      <div class="d-flex flex-wrap gap-3">
+        <button class="btn btn-outline-secondary" *ngFor="let room of rooms">{{ room }}</button>
+      </div>
+    </div>
   </div>
   <div class="col-5">
-    <button
-      class="btn mx-auto d-flex mt-3 align-items-center text-center font-weight-bold"
-      type="button"
-      (click)="openPaymentFormModal()"
-    >
+    <button class="btn mx-auto fw-bold book-button" type="button" (click)="openPaymentFormModal()">
       BOOK NOW
     </button>
   </div>
-</div>
-<h3 class="mb-3 font-weight-bold">Code Room</h3>
-<div>
-  <label class="radio mb-4" *ngFor="let room of rooms; let first = first">
-    <input type="radio" name="card" value="payment" [checked]="first" />
-    <span>{{ room }}</span>
-  </label>
 </div>
