--- a/src/app/pages/renter/accommodation-detail/components/review-section/review-section.component.css
+++ b/src/app/pages/renter/accommodation-detail/components/review-section/review-section.component.css
@@ -1,27 +1,18 @@
 .bi {
   margin-right: 4px;
 }
-.mr-20 {
-  margin-right: 20px;
-}
-.font-weight-bold {
-  font-weight: bold;
-}
+
 .review-card img {
   width: 50px;
   height: 50px;
 }
-.custom-col-1 {
-  max-width: 80px;
-  flex-basis: 80px;
-  padding-right: 0;
+
+.review-card p {
+  margin-bottom: 0;
 }
 
-.col-11 {
-  flex: 1;
-  padding-left: 0;
-}
 .show-detail {
   text-align: center;
   color: #8e8e8e;
+  cursor: pointer;
 }
