--- a/src/app/pages/renter/accommodation-detail/components/review-section/review-section.component.html
+++ b/src/app/pages/renter/accommodation-detail/components/review-section/review-section.component.html
@@ -1,29 +1,26 @@
-<h3 class="mb-1 font-weight-bold">Reviews</h3>
-<div class="mb-5">
-  <span class="mr-20">
-    <i class="bi bi-star-fill"></i>
-    4.8
-  </span>
-  <span>42 Reviews</span>
+<div class="mb-4">
+  <h3 class="fw-bold">Reviews</h3>
+  <div>
+    <span class="mr-20">
+      <i class="bi bi-star-fill"></i>
+      4.8
+    </span>
+    <span>42 Reviews</span>
+  </div>
 </div>
-<div
-  class="review-card rounded border border-dark p-3 mb-4"
-  *ngFor="let review of reviews"
->
-  <div class="row no-gutter mb-2">
-    <div class="col-1 custom-col-1">
-      <span
-        ><img class="rounded-circle" alt="avatar1" src="{{ review.avatar }}"
-      /></span>
-    </div>
-    <div class="col-11">
-      <span class="mr-20 font-weight-bold">{{ review.name }}</span>
-      <span>{{ review.dateReview }}</span>
-      <p class="mb-2">{{ review.address }}</p>
-      <span *ngFor="let star of getStars(review.starNumber)"
-        ><i class="bi bi-star-fill"></i
-      ></span>
-      <p class="mb-0 mt-2">
+<div class="d-flex flex-column gap-4">
+  <div class="review-card rounded border border-dark p-3 d-flex gap-3" *ngFor="let review of reviews">
+    <span><img class="rounded-circle" alt="reviewer-avatar" src="{{ review.avatar }}" /></span>
+    <div class="d-flex flex-column gap-1">
+      <div class="d-flex gap-4">
+        <p class="fw-bold">{{ review.name }}</p>
+        <p>{{ review.dateReview }}</p>
+      </div>
+      <p>{{ review.address }}</p>
+      <div>
+        <span *ngFor="let star of getStars(review.starNumber)"><i class="bi bi-star-fill"></i></span>
+      </div>
+      <p>
         {{ review.reviewContent }}
       </p>
     </div>
