--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,5 @@
     display: block;
     height: 100%;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Ralewaywght@200;300;400;600;700&display=swap');
