FH-43 | Add pagination for ng-paginate component

--- a/src/app/pages/renter/listing/listing.component.css
+++ b/src/app/pages/renter/listing/listing.component.css
@@ -41,6 +41,7 @@ h2 {
 
 .map {
     border-radius: 20px;
+    max-width: 40%;
 }
 
 .pagination-container {
@@ -58,4 +59,8 @@ ngb-pagination ::ng-deep ul>li:not(.active)>a {
 
 ngb-pagination ::ng-deep ul>li.active>a {
     background-color: #336668 !important
+}
+
+ngb-pagination ::ng-deep .page-link:focus {
+    box-shadow: none !important
 }
