--- a/src/app/pages/renter/listing/listing.component.html
+++ b/src/app/pages/renter/listing/listing.component.html
@@ -24,7 +24,8 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center pagination-container">
-                    <ngb-pagination [collectionSize]="70" [page]="4" size="sm" [ellipses]="true" />
+                    <ngb-pagination [collectionSize]="totalCount" [pageSize]="pageSize" [(page)]="page"
+                        [ellipses]="true" (pageChange)="pageChanged($event)" />
                 </div>
             </div>
         </div>
