--- a/src/app/pages/renter/listing/listing.component.html
+++ b/src/app/pages/renter/listing/listing.component.html
@@ -1,5 +1,5 @@
 <app-header-nav-bar></app-header-nav-bar>
-<div class="p-4">
+<div class="p-4 pb-5">
     <h2>
         LISTING
     </h2>
@@ -33,3 +33,4 @@
         </iframe>
     </div>
 </div>
+<app-footer></app-footer>
