FH-47 | Integrate get accommodation detail for renter

--- a/src/app/pages/renter/accommodation-detail/accommodation-detail.component.html
+++ b/src/app/pages/renter/accommodation-detail/accommodation-detail.component.html
@@ -1,7 +1,9 @@
 <app-header-nav-bar></app-header-nav-bar>
 
-<div class="px-4 py-3">
-  <app-booking-detail-section></app-booking-detail-section>
-  <app-infrastructure-section></app-infrastructure-section>
-  <app-review-section></app-review-section>
+<div class="p-4">
+  <app-booking-detail-section [bookingDetailSectionData]="bookingDetailSectionData"></app-booking-detail-section>
+  <app-infrastructure-section [infrastructureSectionData]="infrastructureSectionData"></app-infrastructure-section>
+  <app-review-section [reviewSectionData]="reviewSectionData"></app-review-section>
 </div>
+
+<app-footer></app-footer>
