--- a/src/app/pages/renter/accommodation-detail/components/review-section/review-section.component.html
+++ b/src/app/pages/renter/accommodation-detail/components/review-section/review-section.component.html
@@ -3,27 +3,27 @@
   <div>
     <span class="mr-20">
       <i class="bi bi-star-fill"></i>
-      4.8
+      {{getAverageRating()}}/5
     </span>
-    <span>42 Reviews</span>
+    <span>({{reviewSectionData?.feedbacks?.length}})</span>
   </div>
 </div>
 <div class="d-flex flex-column gap-4">
-  <div class="review-card rounded border border-dark p-3 d-flex gap-3" *ngFor="let review of reviews">
-    <span><img class="rounded-circle" alt="reviewer-avatar" src="{{ review.avatar }}" /></span>
+  <div class="review-card rounded border border-dark p-3 d-flex gap-3"
+    *ngFor="let feedback of reviewSectionData?.feedbacks">
+    <span><img class="rounded-circle" alt="reviewer-avatar" src="{{ feedback.reviewer.avatar }}"
+        (error)="onReviewerAvatarError($event, feedback.reviewer.lastName)" />
+    </span>
     <div class="d-flex flex-column gap-1">
       <div class="d-flex gap-4">
-        <p class="fw-bold">{{ review.name }}</p>
-        <p>{{ review.dateReview }}</p>
+        <p class="fw-bold">{{ feedback.reviewer.firstName + ' ' + feedback.reviewer.lastName}}</p>
       </div>
-      <p>{{ review.address }}</p>
       <div>
-        <span *ngFor="let star of getStars(review.starNumber)"><i class="bi bi-star-fill"></i></span>
+        <span *ngFor="let star of getStars(feedback.rate)"><i class="bi bi-star-fill"></i></span>
       </div>
       <p>
-        {{ review.reviewContent }}
+        {{ feedback.review }}
       </p>
     </div>
   </div>
 </div>
-<h5 class="mt-4 show-detail">Show more</h5>
