--- a/src/app/pages/renter/listing/listing.component.html
+++ b/src/app/pages/renter/listing/listing.component.html
@@ -8,19 +8,21 @@
             <div class="container-fluid px-0">
                 <div class="row row-cols-3 g-3">
                     <div class="col" *ngFor="let accommodation of accommodations">
-                        <div class="card">
-                            <img class="thumbnail" [src]="accommodation.imageUrl" alt="Card image cap">
-                            <div class="card-content">
-                                <p class="item-address">{{ getAccommodationCity(accommodation.latitude,
-                                    accommodation.longitude) }}</p>
-                                <span class="item-rate">
-                                    <i class="bi bi-star-fill"></i>
-                                    {{ roundRating(accommodation.averageRating) }} ({{ accommodation.totalRating }})
-                                </span>
-                                <p class="item-owner">Owner: {{ accommodation.ownerName}}</p>
-                                <p class="item-price">Price: ${{ accommodation.price }}/day</p>
+                        <a [routerLink]="['/renter/accommodation/', accommodation.id]" target="_blank">
+                            <div class="card">
+                                <img class="thumbnail" [src]="accommodation.imageUrl" alt="Card image cap">
+                                <div class="card-content">
+                                    <p class="item-address">{{ getAccommodationCity(accommodation.latitude,
+                                        accommodation.longitude) }}</p>
+                                    <span class="item-rate">
+                                        <i class="bi bi-star-fill"></i>
+                                        {{ roundRating(accommodation.averageRating) }} ({{ accommodation.totalRating }})
+                                    </span>
+                                    <p class="item-owner">Owner: {{ accommodation.ownerName}}</p>
+                                    <p class="item-price">Price: ${{ accommodation.price }}/day</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center pagination-container">
