--- a/src/app/pages/renter/blog/blog.component.css
+++ b/src/app/pages/renter/blog/blog.component.css
@@ -20,11 +20,8 @@ header {
 h4 {
   color: white;
   font-size: 32px;
-  font-family: "Raleway", sans-serif;
   font-weight: bolder;
-  text-align: center;
   color: #cd5c08;
-  position: relative;
   padding-top: 32px;
   text-shadow: 2px 2px 4px #888888;
 }
@@ -45,7 +42,6 @@ h4 {
   border: none;
   border-radius: 30px;
   background-color: #f3ece6;
-  position: relative;
   bottom: 60px;
 }
 
@@ -54,7 +50,6 @@ h4 {
   color: #cd5c08;
   padding: 8px 36px;
   border-radius: 30px;
-  font-family: "Raleway", sans-serif;
 }
 
 .btn-group .btn:focus {
@@ -83,11 +78,12 @@ h5 {
   bottom: 120px;
 }
 
-.blog-container {
-  margin: 40px 120px;
+
+.container {
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 40px;
+  padding: 20px 0px
 }
 
 .heading {
@@ -139,10 +135,6 @@ h5 {
   gap: 15px;
 }
 
-.author {
-  color: #cd5c08;
-  font-size: 14px;
-}
 
 .top-left-title {
   font-weight: bolder;
@@ -203,32 +195,20 @@ h5 {
   font-size: 17px;
 }
 
-.middle-container {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
+.card {
+  border: 0px
 }
-.middle-img-holder {
-  width: 40%;
-  height: max-content;
+
+.img-fluid {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+}
+
+.img-fluid .rounded{
   overflow: hidden;
 }
 
-.middle-img {
-  width: 100%;
-}
-
-.middle-title {
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.middle-content {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  gap: 10px;
-}
 
 .bottom-container {
   display: flex;
@@ -243,35 +223,6 @@ h5 {
   width: 64%;
 }
 
-.bottom-left-box {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
-
-.bottom-left-img-holder {
-  overflow: hidden;
-  border-radius: 10px;
-  width: 60%;
-  height: 220px;
-}
-
-.bottom-left-img {
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
-}
-
-.text-bold {
-  font-weight: bold;
-  color: #cd5c08;
-  text-decoration: underline;
-}
-
-.text-sub {
-  color: #696969;
-}
-
 .bottom-left-horizontal {
   display: flex;
   flex-direction: row;
@@ -284,7 +235,7 @@ h5 {
   width: 40px;
 }
 
-.text-cmt {
+.text-orange {
   color: #cd5c08;
 }
 
@@ -302,28 +253,14 @@ h5 {
   font-size: 20px;
 }
 
-.popular-box {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-.popular-img-holder {
-  height: fit-content;
-}
-
-.popular-img {
-  height: 90px;
-  width: 120px;
-  border-radius: 6px;
-  overflow: hidden;
-  object-fit: cover;
+.card-body {
+  padding: 0px 0px 0px  20px;
 }
 
 .icon-group {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   gap: 40px;
 }
 
@@ -341,22 +278,6 @@ h5 {
   background-color: #cd5c08;
 }
 
-.bottom-box-form {
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0px 1px 10px 0px #696969;
-  border-radius: 10px;
-  gap: 12px;
-  padding: 20px;
-  background-color: #cd5c08;
-  color: white;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
 
 .checkbox-holder {
   display: flex;
