--- a/src/app/pages/renter/blog/blog.component.html
+++ b/src/app/pages/renter/blog/blog.component.html
@@ -12,7 +12,7 @@
   <h5>Let's go...</h5>
 </header>
 
-<div class="blog-container">
+<div class="container">
   <div class="heading">
     <div class="heading-title">Lastest New</div>
     <button class="heading-btn">Post</button>
@@ -24,7 +24,7 @@
         <img src="assets/mock/blog/sapa.jpg" alt="" class="img-center" />
       </div>
       <div class="content">
-        <div class="author">Olivia Rhye • 1 Jan 2023</div>
+        <div class="text-orange">Olivia Rhye • 1 Jan 2023</div>
         <div class="top-left-title">
           The Top 11 Things to Do in Sapa, Vietnam
         </div>
@@ -47,7 +47,7 @@
           <img class="top-right-img" [src]="card.image" alt="Card image cap" />
         </div>
         <div class="top-right-content">
-          <div class="author">{{ card.author }} • {{ card.date }}</div>
+          <div class="text-orange">{{ card.author }} • {{ card.date }}</div>
           <div class="top-right-title">{{ card.title }}</div>
           <div>{{ card.text }}... See More</div>
           <div class="card-tag-container">
@@ -64,17 +64,15 @@
     </div>
   </div>
 
-  <div class="middle-container">
-    <div class="middle-img-holder">
-      <img
-        src="assets/mock/blog/danang-terminal.jpg"
-        alt=""
-        class="middle-img"
-      />
-    </div>
-    <div class="middle-content">
-      <div class="author">Olivia Rhye • 1 Jan 2023</div>
-      <div class="middle-title">
+  <div class="card mb-3">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="assets/mock/blog/danang-terminal.jpg" class="img-fluid" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <div class="text-orange">Olivia Rhye • 1 Jan 2023</div>
+      <div class="title-bold">
         Da Nang International Terminal is certified to welcome Chinese
         passengers
       </div>
@@ -95,34 +93,41 @@
         <div class="card-tag-box" data-status="Research">Research</div>
         <div class="card-tag-box" data-status="Presentation">Design</div>
       </div>
+        </div>
+      </div>
     </div>
   </div>
 
+
+
+
   <div class="bottom-container">
     <div class="bottom-box">
-      <div class="bottom-left-box" *ngFor="let popular of populars">
-        <div class="bottom-left-img-holder">
-          <img [src]="popular.image" alt="" class="bottom-left-img" />
-        </div>
-        <div class="top-right-content">
-          <div class="top-right-title">{{ popular.title }}</div>
-          <div class="bottom-left-horizontal">
-            <span class="text-bold">Post</span>
-            <span class="text-sub">By</span>
-            <span class="post-author"
-              ><b>{{ popular.author }}</b></span
-            >
+      
+      <div class="card mb-3" *ngFor="let popular of populars">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img [src]="popular.image" class="img-fluid rounded" style="height:200px;" alt="...">
           </div>
-          <div class="bottom-left-horizontal">
-            <span class="text-sub">10 Nov, 2023</span>
-            <hr class="bottom-left-hr" />
-            <span class="text-cmt">50 comment</span>
+          <div class="col-md-8">
+            <div class="card-body">
+              <div class="top-right-title">{{ popular.title }}</div>
+              <div class="bottom-left-horizontal">
+                <span class="text-orange"><b>Post</b></span>
+                <span class="text-sub">By</span>
+                <span>
+                  ><b>{{ popular.author }}</b></span>
+              </div>
+              <div class="bottom-left-horizontal">
+                <span class="text-sub">10 Nov, 2023</span>
+                <hr class="bottom-left-hr" />
+                <span class="text-orange">50 comment</span>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed et
+                donec purus viverra. Sit justo velit, eu sed sollicitudin tempus,</p>
+                <div class="text-orange"><b>READ MORE...</b></div>
+            </div>
           </div>
-          <div class="text-sub">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed et
-            donec purus viverra. Sit justo velit, eu sed sollicitudin tempus,
-          </div>
-          <div class="text-bold">READ MORE...</div>
         </div>
       </div>
       <div class="pagination-container">
@@ -146,23 +151,30 @@
     <div class="bottom-box" style="flex: 1">
       <div class="bottom-right-box">
         <div class="title-bold">Popular Post</div>
-        <div class="popular-box" *ngFor="let popular of populars">
-          <div class="popular-img-holder">
-            <img [src]="popular.image" alt="" class="popular-img" />
-          </div>
-          <div>
-            <div class="top-right-title">
-              {{ popular.title }}
+
+        <div class="card mb-3" *ngFor="let popular of populars">
+          <div class="row g-0" >
+            <div class="col-md-4">
+              <img [src]="popular.image" class="img-fluid rounded" alt="...">
             </div>
-            <div class="bottom-left-horizontal">
-              <span class="text-bold">Post</span>
-              <span class="text-sub">By</span>
-              <span class="post-author"><b>Adam Smith</b></span>
-            </div>
-            <div class="bottom-left-horizontal">
-              <span class="text-sub">10 Nov, 2023</span>
-              <hr class="bottom-left-hr" />
-              <span class="text-cmt">50 comment</span>
+            <div class="col-md-8">
+              <div class="card-body">
+                <p class="card-text"><small class="text-body-secondary">
+                  <div class="top-right-title" style="font-size: 13px;">
+                    {{ popular.title }}
+                  </div>
+                  <div class="bottom-left-horizontal">
+                    <span class="text-orange"><b>Post</b></span>
+                    <span class="text-sub">By</span>
+                    <span><b>Adam Smith</b></span>
+                  </div>
+                  <div class="bottom-left-horizontal">
+                    <span class="text-sub">10 Nov, 2023</span>
+                    <hr class="bottom-left-hr" />
+                    <span class="text-orange">50 comment</span>
+                  </div>
+                </small></p>
+              </div>
             </div>
           </div>
         </div>
@@ -183,13 +195,12 @@
         </div>
       </div>
 
-      <div class="bottom-box-form">
+      <div class="bottom-right-box" style="background-color: #cd5c08; color:white">
         <div class="title-bold">Subscribe Today</div>
         <div>
           Let's subscribe to receive important information and discounts from
           our platform.
         </div>
-
         <input
           type="text"
           class="form-control"
