--- a/src/app/pages/renter/blog-journey/blog-journey.component.html
+++ b/src/app/pages/renter/blog-journey/blog-journey.component.html
@@ -3,10 +3,21 @@
   <h4>Blog</h4>
   <div class="line"></div>
   <div class="btn-group filter" role="group">
-    <button type="button" class="btn">All</button>
-    <button type="button" class="btn">Journey</button>
-    <button type="button" class="btn">Experience</button>
-    <button type="button" class="btn">Culture and Cuisine</button>
+    <a [routerLink]="['/renter/blog/all']" [class.activated-tab]="currentTab === 'all'">
+      <button type="button" class="btn">All</button>
+    </a>
+
+    <a [routerLink]="['/renter/blog/journey']" [class.activated-tab]="currentTab === 'journey'">
+      <button type="button" class="btn">Journey</button>
+    </a>
+
+    <a [routerLink]="['/renter/blog/experience']" [class.activated-tab]="currentTab === 'experience'">
+      <button type="button" class="btn">Experience</button>
+    </a>
+
+    <a [routerLink]="['/renter/blog/culture-cuisine']" [class.activated-tab]="currentTab === 'culture-cuisine'">
+      <button type="button" class="btn">Culture and Cuisine</button>
+    </a>
   </div>
   <h1>JOURNEY</h1>
 </header>
@@ -18,11 +29,7 @@
   <div class="row">
     <div class="col-4 mt-4" *ngFor="let cardItem of cards">
       <div class="card">
-        <img
-          class="card-img-top"
-          src="{{ cardItem.cardImage }}"
-          alt="Card image cap"
-        />
+        <img class="card-img-top" src="{{ cardItem.cardImage }}" alt="Card image cap" />
         <div class="card-body">
           <h5 class="card-title">{{ cardItem.cardTitle }}</h5>
           <p class="card-text">{{ cardItem.cardText }}</p>
@@ -34,11 +41,6 @@
     </div>
   </div>
   <div class="d-flex justify-content-center pagination-container">
-    <ngb-pagination
-      [collectionSize]="70"
-      [page]="4"
-      size="sm"
-      [ellipses]="true"
-    />
+    <ngb-pagination [collectionSize]="70" [page]="4" size="sm" [ellipses]="true" />
   </div>
 </div>
